fix image fitting on mobile

--- a/aroundme/client/src/components/ImageSlider.css
+++ b/aroundme/client/src/components/ImageSlider.css
@@ -6,13 +6,24 @@
 
 .ImageSlider-imageContainer {
   display: flex;
+  flex: 1 auto;
   height: 100%;
+}
+
+.ImageSlider > .react-swipeable-view-container {
   width: 100%;
+}
+
+.ImageSlider > .react-swipeable-view-container > div {
+  display: flex;
+  flex-direction: column;
 }
 
 .ImageSlider-image {
   align-self: center;
+  flex-grow: 0;
   margin: 0 auto;
   max-width: 100%;
   max-height: 100%;
+  object-fit: contain;
 }
